Fix z-index of endless_loading.

--- a/astrobin/static/css/astrobin.less
+++ b/astrobin/static/css/astrobin.less
@@ -3404,6 +3404,7 @@ table#private-shared-folders tr:hover a.delete-folder { visibility: visible; }
         bottom: 0;
         left: 0;
         width: 100%;
+        z-index: 3;
     }
 }
 
